--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,19 +1,23 @@
 ---
 title: "Reproducible Research: Course Project 1"
+author: "KD"
 output: 
   html_document:
     keep_md: true
 ---
-
-
-## Loading and preprocessing the data  
   
-   
+
+## Loading and preprocessing the data
+<br/>
+  
+#### Loading the data
 First, we download and unzip the following file into the user's working 
 directory: [activity.zip][1]  
 Then we read it into R.  For the following analyses, it is presupposed that the 
 R packages ```lubridate```, ```dplyr```, ```ggplot2```, ```lattice``` are 
 already installed. 
+<br/>
+<br/>
 
 ```{r packages, message=FALSE}
 library(lubridate)
@@ -37,17 +41,23 @@ activity <-read.csv("activity.csv")
 ```{r show dataset,cache=TRUE}
 head(activity, n = 3)
 ```
+<br/>
+
+#### Processing/transforming the data  
 Notice that the data set is already tidy, so we do not need to process it any 
 further.  
-  
-  
+<br/><br/>  
     
 ## What is mean total number of steps taken per day?  
+<br/>
 The code below: 
 
 - calculates the total number of steps taken for each day,  
 - generates a **histogram** of the total number of steps taken for each day,  
-- calculates and reports the **mean** and **median** total number of steps taken daily.  
+- calculates and reports the **mean** and **median** total number of steps taken 
+daily.  
+<br/>
+<br/>
 
 ```{r hist,cache=TRUE}
 dailysums <- activity %>% select(date, steps) %>% group_by(date) %>% 
@@ -65,11 +75,28 @@ dailysums %>% summarize("mean daily steps" = mean(sumsteps, na.rm = TRUE),
                   "median daily steps" = median(sumsteps, na.rm = TRUE)) %>%
 print.data.frame
 ```
+<br/>
+Visually inspecting the histogram, we see that the 
+total daily step count corresponding to this data set appear to be somewhat 
+left-skewed. However, the mean and median daily step totals are virtually 
+identical, probably due to the two unusually large step totals in the right tail "counterbalancing" the left skew, in what is not a particularly large dataset.
+<br/>
+<br/>
+
   
   
-  
-## What is the average daily activity pattern?  
-  
+## What is the average daily activity pattern?   
+<br/>
+The code below: 
+
+- calculates the mean number of steps taken for each interval value, averaged 
+across all days,
+- generates a **time series plot** of the interval value versus the mean number 
+of steps taken for that interval,  
+- calculates and reports the specific interval that has the **maximum** mean 
+number of steps.  
+<br/>
+<br/>
     
 ```{r mean steps by interval,results='hide', cache=TRUE}
 meanintsteps <- activity %>% select (interval, steps) %>% group_by(interval) %>%
@@ -88,10 +115,25 @@ ggplot(meanintsteps, aes(interval, meansteps)) + geom_line(aes(color = "blue"),
 ```{r max interval mean, cache=TRUE}
 print.data.frame(filter(meanintsteps, meansteps == max(meansteps)))
 ```
+<br/>
+The time series plot has several interesting features, of which we will mention 
+two.  Immediately noticeable is that the average steps is essentially zero for 
+the first 500-odd intervals. In the context of the data, this makes sense, as 
+those intervals almost certainly would correspond to the times when the person 
+in the study were asleep.  
+In addition, there is a noticeable spike in the average number of steps, 
+occurring approximately between the intervals 800 and 900.  More specifically, 
+the interval equal to 835 has the largest average number of steps.
+One potential explanation is that the person exercises in the aforementioned 
+time period.
+<br/>
+<br/>
   
   
   
 ## Imputing missing values  
+<br/>
+
 ```{r imputing, results='hide', cache=TRUE}
 augactivity <- left_join(activity, meanintsteps, by = "interval") 
 augimpute <- mutate(augactivity, 
@@ -124,15 +166,16 @@ dailysumsimpute %>% summarize("adjusted mean daily steps" =
                                       median(sumsteps, na.rm = TRUE)) %>% print.data.frame
 ```
 
+<br/>
 
 Since 1) the NAs were ignored in the original computation of the mean (as 
 opposed to being assigned the value '0', for example), and 2) the NAs were 
 uniformly distributed across *all* intervals, imputing the within-interval mean 
 for all NAs in each interval will *not* change the overall mean.  
-  
-  
-  
-## Are there differences in activity patterns between weekdays and weekends?
+<br/>
+
+## Are there differences in activity patterns between weekdays and weekends?  
+<br/>
 
 ```{r ,results='hide', cache=TRUE}
 activityimputeday <- 
@@ -153,10 +196,11 @@ meanbydayintsteps <- activityimputeday %>% select(daytype, interval, steps) %>%
 ```
 
 ```{r panel plot, eval=FALSE, include=FALSE}
-xyplot(meansteps ~ interval | daytype, data = meanbydayintsteps, layout=c(1,2),
-       xlab = "time interval", ylab = "average steps", type="l",col="blue")
+xyplot(meansteps ~ interval | daytype, data = meanbydayintsteps, layout =c(1,2),
+       xlab = "time interval", ylab = "average steps", type = "l", col = "blue")
 ```
+<br/>
+Of course, notwithstanding
 
 [1]: https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip "activity.zip"
 
-Of course, notwithstanding
